Fix RealPermissions hookup.